<resources>
    <!-- Manifest String -->
    <string name="app_name">KangDroidNotification</string>
    <string name="kdr_notification_service">KangDroidNotificationListener</string>

    <!-- Mostly Java-Related Strings -->
    <string name="server_off">Server Status: OFF</string>
    <string name="server_on">Server Status: ON</string>
    <string name="server_connection_error">Error connecting server.</string>
    <string name="getting_app_list">Getting Application Lists…</string>

    <!-- Server Related Management -->
    <string name="server_management_title">Server-Related Management</string>

    <!-- Editing Server URL -->
    <string name="default_enter_server_url">Enter Server URL[Without Port]</string>
    <string name="server_url_title">Set Server URL</string>

    <!-- Editing Server Port -->
    <string name="default_enter_server_port">Enter Server Port</string>
    <string name="server_port_title">Set Server Port</string>

    <!-- Server Reload -->
    <string name="manual_server_reload">Check for server availability manually</string>

    <!-- Notification Management -->
    <string name="notification_manage_title">Notification Management</string>

    <!-- Charging State Switch -->
    <string name="charging_state">Disable Charging State</string>

    <!-- Notification Blacklist -->
    <string name="blacklist_title">Add Notification Blacklist</string>

    <!-- Advanced Server Settings -->
    <string name="advanced_server_category">Advanced Server Settings</string>

    <!-- Advanced: Auto server checking -->
    <string name="enable_auto_checking">Enable Auto Checking</string>
    <string name="enable_auto_checking_summary">Server availability check support</string>
    <string name="auto_checking_interval">Auto Checking Interval</string>

    <!-- Auto Server Checking Dialog -->
    <string name="dialog_ok">OK</string>
    <string name="time_less_warning">Warning: Setting less than 1000ms is not supported due to battery drain.</string>
    <string name="time_too_much_warning">Warning: Setting more than 50000ms is not supported due to inefficiency.</string>
</resources>