<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/advanced_server_category"
        app:iconSpaceReserved="false">
        <EditTextPreference
            android:defaultValue="@string/default_enter_server_url"
            android:key="enter_server_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/server_url_title"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            android:defaultValue="@string/default_enter_server_port"
            android:key="enter_server_port"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/server_port_title"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="server_reload"
            android:selectable="true"
            android:title="@string/manual_server_reload"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>