<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/server_management_title"
        app:iconSpaceReserved="false">
        <Preference
            android:key="server_status"
            android:selectable="true"
            android:title="@string/server_off"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="advanced_server_settings"
            android:title="@string/advanced_server_category"
            android:fragment="com.kangdroid.notification.AdvancedServerSettings"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_manage_title"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="disable_charging_state"
            android:title="@string/charging_state"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="blacklist_notification"
            android:title="@string/blacklist_title"
            android:fragment="com.kangdroid.notification.BlackList"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>